# research-budgeting-tool

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 61bd79bcb065_baseline.py  e59842cbd155_add_user_and_audit_log.py
backend/app/: config.py  db.py  main.py
backend/app/models/: __init__.py  audit.py  budget_round.py  fixed_fees.py  price_master.py  trial.py  user.py
backend/app/routes/: audit.py  auth.py  budget.py  price_master.py  trial.py
backend/app/schemas/: __init__.py  audit.py  auth.py  budget.py  price_master.py  trial.py
backend/app/seed/: import_pra.py
backend/app/services/: audit.py  auth.py  pricing.py  soa_parser.py  xlsx_export.py
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/audit/: page.tsx
frontend/src/app/admin/fixed-fees/: page.tsx
frontend/src/app/admin/price-master/: page.tsx
frontend/src/app/admin/price-master/[id]/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/trials/[id]/: page.tsx
frontend/src/app/trials/[id]/compare/: page.tsx
frontend/src/app/trials/[id]/rounds/[roundId]/: page.tsx
frontend/src/components/: AuthBar.tsx
frontend/src/lib/: api.ts
samples/: Client SOA Example.xlsx  Final Budget Presentation.xlsx  PRA- Rates-Coverage Analysis.xlsx  Schedule of Activity (SOA).xlsx
